Remove the explicity usage of the jakarta.persistence specification.
The database is only known to the entities. All other components should
use the find(), merge() and delete() methods.